--- a/MoppApp/MoppApp/TokenFlow.storyboard
+++ b/MoppApp/MoppApp/TokenFlow.storyboard
@@ -33,7 +33,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jHz-uj-av0">
-                                <rect key="frame" x="16" y="52" width="343" height="545"/>
+                                <rect key="frame" x="16" y="61" width="343" height="545"/>
                                 <subviews>
                                     <containerView autoresizesSubviews="NO" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="pUF-he-w2e">
                                         <rect key="frame" x="0.0" y="56" width="343" height="469"/>
@@ -135,11 +135,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="MTn-Np-IcR" firstAttribute="bottom" secondItem="jHz-uj-av0" secondAttribute="bottom" priority="250" constant="-577" id="5fb-m1-mhq"/>
-                            <constraint firstItem="jHz-uj-av0" firstAttribute="top" secondItem="AWR-IZ-uHO" secondAttribute="top" constant="32" id="BLB-6R-Y4f"/>
+                            <constraint firstItem="jHz-uj-av0" firstAttribute="centerX" secondItem="DQv-G9-Xiy" secondAttribute="centerX" id="EaQ-2z-gUj"/>
                             <constraint firstAttribute="trailing" secondItem="jHz-uj-av0" secondAttribute="trailing" constant="16" id="QAs-rn-xAH"/>
                             <constraint firstItem="jHz-uj-av0" firstAttribute="centerY" secondItem="DQv-G9-Xiy" secondAttribute="centerY" priority="750" constant="-9" id="XFX-vL-g8G"/>
                             <constraint firstItem="jHz-uj-av0" firstAttribute="centerY" secondItem="DQv-G9-Xiy" secondAttribute="centerY" priority="700" constant="-9" id="baj-V7-Ubo"/>
                             <constraint firstItem="jHz-uj-av0" firstAttribute="height" secondItem="DQv-G9-Xiy" secondAttribute="height" multiplier="0.683658" constant="89.000113999999996" id="che-U1-Qyo"/>
+                            <constraint firstItem="jHz-uj-av0" firstAttribute="centerY" secondItem="DQv-G9-Xiy" secondAttribute="centerY" id="gEE-cm-chQ"/>
                             <constraint firstItem="jHz-uj-av0" firstAttribute="leading" secondItem="DQv-G9-Xiy" secondAttribute="leading" constant="16" id="kUB-iE-Oqb"/>
                         </constraints>
                     </view>
